fixed piano spacing

--- a/src/App.css
+++ b/src/App.css
@@ -166,7 +166,6 @@ body {
 .piano {
 	display: flex;
 	justify-content: center;
-	max-width: 65%;
 }
 
 .white {
@@ -230,8 +229,8 @@ body {
 	width: 60px;
 	height: 147px;
 	box-shadow: 0px 3px 5px #666;
-	margin-left: -26.5px;
-	margin-right: -26.5px;
+	margin-left: -30px;
+	margin-right: -30px;
 	z-index: 1;
 }
 
